@@ -1,0 +1,276 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u64f4\u5927\u6b50\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u3001BTS\u6210\u54e1V\u53d6\u5f97\u767d\u91d1\u8a8d\u8b49\u3001Infinite\u6176\u795d\u51fa\u905315\u9031\u5e74", "description": "K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u64f4\u5927\u6b50\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u3001BTS\u6210\u54e1V\u53d6\u5f97\u767d\u91d1\u8a8d\u8b49\u3001Infinite\u6176\u795d\u51fa\u905315\u9031\u5e74", "url": "https://www.famechos.me/news/K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u64f4\u5927\u6b50\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u3001BTS\u6210\u54e1V\u53d6\u5f97\u767d\u91d1\u8a8d\u8b49\u3001Infinite\u6176\u795d\u51fa\u905315\u9031\u5e74.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T00:18:30.642528+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年.html"/>
+<meta name="description" content="K-POP風暴席捲全球，ATEEZ擴大歐洲巡迴演唱會，BTS成員V取得白金認證，Infinite慶祝出道15週年。追蹤最新K-POP新聞，了解你喜愛的偶像最新動態！" />
+
+<meta name="keywords" content="K-POP, ATEEZ, BTS, V, Infinite, 歐洲巡迴演唱會, 白金認證, 出道15週年" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年.html" />
+        <meta property="og:title" content="K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年" />
+        <meta property="og:description" content="K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年" />
+        <meta property="twitter:description" content="K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴演唱會、BTS成員V取得白金認證、Infinite慶祝出道15週年</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>韓國男子組合ATEEZ將在歐洲舉行的巡迴演唱會場次增加至14場，新增倫敦和柏林兩場演出。這是他們「朝向光明：權力之旅巡迴演唱會」（Towards the Light: Will to Power tour）的一部分。該巡迴演唱會已於今年夏天在美國和加拿大十個城市舉行，並將於明年一月在法國重新開始。</p>
+<h2>第10張迷你專輯「Golden Hour: Part 1」由ATEEZ帶來</h2>
+<p>ATEEZ的第10張迷你專輯「Golden Hour: Part 1」於五月發行，登上了告示牌二百大專輯榜（Billboard 200）的第二位，並連續七週在榜上排名，這是該組合最長的紀錄。</p>
+<h2>日本授予BTS成員V白金認證</h2>
+<p>BTS成員V憑藉他的個人專輯「Layover」取得了日本唱片協會（Recording Industry Association of Japan）的白金認證。這是他的首張個人專輯在日本取得25萬張出貨量。</p>
+<h2>慶祝Infinite出道15週年</h2>
+<p>韓國男子組合Infinite將舉行巡迴演唱會以慶祝出道15週年。該組合將於12月6日在首爾舉行為期三天的演唱會，然後將在亞洲八個城市進行巡迴演出，包括台北、澳門、雅加達、新加坡、橫濱、吉隆坡和香港。</p>
+<table>
+<tr>
+<th>組合</th>
+<th>巡迴演唱會</th>
+<th>城市</th>
+</tr>
+<tr>
+<td>ATEEZ</td>
+<td>朝向光明：權力之旅巡迴演唱會</td>
+<td>歐洲14場</td>
+</tr>
+<tr>
+<td>Infinite</td>
+<td>慶祝出道15週年巡迴演唱會</td>
+<td>亞洲8個城市</td>
+</tr>
+</table><h2>H1-Key舉行香港粉絲演唱會</h2>
+<p>韓國女子組合H1-Key將於11月16日開始在亞洲舉行首次粉絲演唱會巡迴。該組合將首先在香港演出，然後將在亞洲其他地區進行巡迴演出，包括曼谷。</p>
+<h2>KEY 將與粉絲一起創造美好的回憶</h2>
+<p>KEY組合成員們在官方粉絲社群中表示，他們迫不及待地想要與粉絲一起共度美好時光。</p>
+<p>該組合在七月份發行了第三張迷你專輯《Love or Hate》，並在中國和日本舉辦了簽名會。《Rose Blossom》是他們去年發行的第一張迷你專輯的主打歌。</p>
+<p>以下是該組合的部分成就：</p>
+<ul>
+<li>憑藉第二張迷你專輯《Seoul Dreaming》中的兩首主打歌之一《Seoul》奪得了第一個電視音樂榜單的冠軍</li>
+</ul>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nyUsPv0zZlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
