@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 00:16:35 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 00:18:42 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
@@ -13,5 +13,11 @@
   <description>TXT將於下月回歸推出第七張迷你專輯TOMORROWXTOGETHER韓文투모로우바이투게더將於11月4日回歸推出第七張迷你專輯TheStarChapterSanctuary這張專輯是該團第四個系列的首張作品之前的系列分別是夢想混亂和名字距離該團上一張迷你專...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 00:16:35 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html</link>
+  <description>ATEEZ擴大歐洲巡迴演唱會至14場韓國男子組合ATEEZ將在歐洲舉行的巡迴演唱會場次增加至14場新增倫敦和柏林兩場演出這是他們朝向光明權力之旅巡迴演唱會TowardstheLightWilltoPowertour的一部分該巡迴演唱會已於今年夏天在美國和加拿大十個城市舉行並將於明年一月在...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 00:18:42 +0800</pubDate>
 </item></channel>
 </rss>
